# CogniScope

./: .bashrc  .gitattributes  .gitignore  README.md  readme.txt
docs/: GETTING_STARTED.md  upload_v1.sh
install/: local_setup.sh  setup.sh
install/common_unique_msgs/share/common_unique_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fusion_tracker/lib/fusion_tracker/: fusion_tracker_node
install/fusion_tracker/share/fusion_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fusiondet/lib/fusiondet/: fusiondet  fusiondet1  test  test2
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
log/: latest_build
src/AB3DMOT-master/AB3DMOT_libs/: kitti_oxts.py  model.py
src/AB3DMOT-master/configs/: tracker.yaml
src/DDFN/: detect_twostream.py  test.py  train.py
src/DDFN/models/: common.py  yolov5l.yaml
src/DDFN/utils/: datasets.py  loss.py
src/Infrared-Small-Target-Detection-master/: demo.py
src/Infrared-Small-Target-Detection-master/model/: parse_args_train.py
src/OpenPCDet/pcdet.egg-info/: SOURCES.txt
src/OpenPCDet/tools/: demo.py  test.py
src/PSAS_ISTD/model/: Biformer.py  biformer.py  model_DNANet.py  od_resnet.py  parse_args_test.py
src/driver_ros1/d455_camera/: readme.txt
src/driver_ros1/m1/: readme.txt
src/driver_ros1/m1/rslidar_ws/src/gps_msg/: CMakeLists.txt  package.xml
src/driver_ros1/ultrasonic_radar_ws/: .compile.sh.swp  compile.sh  frames.gv
src/driver_ros1/ultrasonic_radar_ws/src/ultrasonic_radar/: CMakeLists.txt  package.xml
src/driver_ros1/ultrasonic_radar_ws/src/ultrasonic_radar/src/: ultrasonic_radar_node.cpp
src/driver_ros1/ws_infrared_usb_cam/: readme.txt
src/fusion_tracker/: package.xml  setup.cfg  setup.py
src/fusion_tracker/fusion_tracker/: fusion_tracker_node.py  fusion_tracker_node_2.py
src/fusion_tracker/launch/: fusion_tracker.launch.py
src/fusiondet/: package.xml  setup.cfg  setup.py
src/fusiondet/config/: 000000.txt  000001.txt  000815.txt  000815_1.txt  convert_ann_file.py  kitti_infos_val.pkl  kitti_infos_val_dict.pkl  robotc.txt  robotc_1.txt
src/fusiondet/fusiondet/: mstdet.py  run.txt  test.py  test1.py  test_carla.py
src/fusiondet/test/: calib_check_node.py
src/masa_track/: requirements.txt  跟踪模型环境配置.txt
src/mmdetection3d/: README.md  setup.py  训练步骤.txt
src/mmdetection3d/demo/: extract_single_info.py  multi_modality_demo.py
src/mmdetection3d/tools/: train.py  train_1.py
src/multispectral-object-detection-main/: a.py  b.py
src/multispectral-object-detection-main-prune/: requirements.txt  test.py
src/multispectral-object-detection-main-prune/data/: hyp.scratch_prune.yaml
src/multispectral-object-detection-main-prune/models/: common.py  gradcam.py  pruned_common.py  yolo.py  yolo_test.py  yolov5_object_detector.py
src/multispectral-object-detection-main-prune/utils/: datasets.py  general.py  loss.py  plots.py  torch_utils.py
src/multispectral-object-detection-main/models/: yolo_test.py
src/pcdet_ros2/: setup.py
src/pcdet_ros2/config/: pcdet_pvrcnn.param.yaml  tracker.yaml
src/pcdet_ros2/launch/: pcdet.launch.py  pcdet_with_tracking.launch.py
src/pcdet_ros2/pcdet_ros2/: pcdet_node.py  pcdet_tracker.py  pcdet_tracker_1.py
src/see_beyond_ros2/: package.xml  readme.txt  setup.py
src/see_beyond_ros2/launch/: see_beyond_ros2.launch.py
src/see_beyond_ros2/see_beyond_ros2.egg-info/: SOURCES.txt  top_level.txt
src/see_test/: inter_data.txt  使用命令.txt  问题解决.txt
src/see_test/data/: lidar  radar
src/see_test/pcdet.egg-info/: PKG-INFO  SOURCES.txt
src/see_test/tools/: demo.py  demo_debug.py  demo_picture.py  demo_plot.py  draw_pcd.py  eval_cfar_lidar.sh  eval_single_epoch.py  gpu_watcher.py  prepare_vod_dataset.py  radar_compress.py  see_kitti_infos.py  train.py  train_cfar_lidar_changed.sh  zuotu.py
src/sensor_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sensor_driver/install/imu5651_driver/share/imu5651_driver/: package.dsv  package.sh  package.xml
src/sensor_driver/install/imu5651_driver/share/imu5651_driver/cmake/: imu5651_driverConfig.cmake
src/sensor_driver/log/: latest_build
src/sensor_driver/scripts/: readme.md  start_sensors_tmux.sh
src/sensor_driver/src/imu5651_driver/: CMakeLists.txt
src/sensor_driver/src/imu5651_driver/include/imu5651_driver/: serial_reader.hpp
src/sensor_driver/src/imu5651_driver/src/: main.cpp  serial_reader.cpp
src/ultralytics_ros/: README.md
src/ultralytics_ros/config/: calib.yaml
src/ultralytics_ros/launch/: kitti_tracker.launch.xml  kitti_tracker_with_cloud.launch.xml  tracker.launch.xml  tracker_with_cloud.launch.xml
src/ultralytics_ros/rviz2/: kitti.rviz
src/ultralytics_ros/script/: tracker_node.py  tracker_node_3d.py
src/ultralytics_ros/src/: tracker_with_cloud_node_shibai.cpp
tools/SUSTechPOINTS/: 运行步骤.txt
tools/SUSTechPOINTS/tools/: kitti_style_calib.json  trans_kitti_labels_peng.py
tools/cyclonedds_ws/: readme.txt
(+9490 files in other folders)
