<?xml version="1.0"?>
<package format="3">
  <name>gps_messages</name>
  <version>1.5.16</version>
  <description>gps_messages</description>
  <maintainer email="grayfalcon@foxmail.com">grayfalcon</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>


  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
