<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu5651_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver for IMU5651 device with GPS/IMU data fusion</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Buildtool依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 合并后的依赖声明 -->
  <depend>rclcpp</depend>
  <depend>common_unique_msgs</depend>
  <depend>serial_driver</depend>
  <depend>io_context</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
